Read database login credentials from a file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+credentials.txt
+
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudio,qt,qtcreator
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudio,qt,qtcreator
 
