--- a/TheSystemLoadBalancer/TheSystemLoadBalancer/TheSystemLoadBalancer.vcxproj.filters
+++ b/TheSystemLoadBalancer/TheSystemLoadBalancer/TheSystemLoadBalancer.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="sockets.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ServerConnection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sockets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ServerConnection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
