--- a/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj.filters
+++ b/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="DatabaseManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RequestHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sockets.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DatabaseManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RequestHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
