Move mysql session out of DatabaseManager to avoid compilation errors. Update the server makefile.
On Linux, it seems that the mysql api defines SOCKET, which conflicts with my own definition of SOCKET. This will require refactoring to enable the server to run on Linux.

--- a/TheSystemServer/TheSystemServer/makefile
+++ b/TheSystemServer/TheSystemServer/makefile
@@ -1,6 +1,7 @@
 #!/bin/bash
 
 all:
-	@g++ -o server TheSystemServer.cpp sockets.cpp DatabaseManager.cpp
+	MYSQL_CPPCONN_DIR=/usr/local/lib/mysqlcppconn/usr
+	@g++ -I/usr/local/lib/mysqlcppconn/usr/include/mysql-cppconn-8 -L/usr/local/lib/mysqlcppconn/usr/lib/x86_64-linux-gnu -lmysqlcppconn8 -o server TheSystemServer.cpp sockets.cpp DatabaseManager.cpp RequestHandler.cpp SignInDAO.cpp 
 clean:
 	@rm server
