DatabaseManager executes sql queries. Attempt to check if sign in credentials are correct by checking the database.
username and password are read blank from the packet for now

--- a/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj.filters
+++ b/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="RequestHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SignInDAO.cpp">
+    <ClCompile Include="UsersDAO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PacketFormat.cpp">
@@ -44,7 +44,7 @@
     <ClInclude Include="RequestHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SignInDAO.h">
+    <ClInclude Include="UsersDAO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PacketFormats.h">
