--- a/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj
+++ b/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj
@@ -154,7 +154,7 @@
     <ClCompile Include="DatabaseManager.cpp" />
     <ClCompile Include="PacketFormat.cpp" />
     <ClCompile Include="RequestHandler.cpp" />
-    <ClCompile Include="SignInDAO.cpp" />
+    <ClCompile Include="UsersDAO.cpp" />
     <ClCompile Include="sockets.cpp" />
     <ClCompile Include="TheSystemServer.cpp" />
   </ItemGroup>
@@ -162,7 +162,7 @@
     <ClInclude Include="DatabaseManager.h" />
     <ClInclude Include="PacketFormats.h" />
     <ClInclude Include="RequestHandler.h" />
-    <ClInclude Include="SignInDAO.h" />
+    <ClInclude Include="UsersDAO.h" />
     <ClInclude Include="sockets.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
