--- a/TheSystemServer/TheSystemServer/makefile
+++ b/TheSystemServer/TheSystemServer/makefile
@@ -2,6 +2,6 @@
 
 all:
 	MYSQL_CPPCONN_DIR=/usr/local/lib/mysqlcppconn/usr
-	@g++ -I/usr/local/lib/mysqlcppconn/usr/include/mysql-cppconn-8 -L/usr/local/lib/mysqlcppconn/usr/lib/x86_64-linux-gnu -lmysqlcppconn8 -o server TheSystemServer.cpp sockets.cpp DatabaseManager.cpp RequestHandler.cpp SignInDAO.cpp 
+	@g++ -I/usr/local/lib/mysqlcppconn/usr/include/mysql-cppconn-8 -L/usr/local/lib/mysqlcppconn/usr/lib/x86_64-linux-gnu -lmysqlcppconn8 -o server TheSystemServer.cpp sockets.cpp DatabaseManager.cpp RequestHandler.cpp UsersDAO.cpp PacketFormat.cpp
 clean:
 	@rm server
