--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 credentials.txt
 addresses.csv
 
+# the server executable
+server
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudio,qt,qtcreator
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudio,qt,qtcreator
