Change the LoadBalancer to define socket_t data type to replace windows and linux file descriptor types. The server and load balancer now compile and run on Windows and Linux.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ addresses.csv
 # the server executable
 server
 
+# the load balancer executable
+loadbalancer
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/c++,visualstudio,qt,qtcreator
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,visualstudio,qt,qtcreator
