--- a/TheSystemLoadBalancer/TheSystemLoadBalancer/makefile
+++ b/TheSystemLoadBalancer/TheSystemLoadBalancer/makefile
@@ -1,6 +1,6 @@
 #!/bin/bash
 
 all:
-	@g++ -o loadBalancer TheSystemLoadBalancer.cpp sockets.cpp
+	@g++ -o loadBalancer TheSystemLoadBalancer.cpp sockets.cpp ServerConnection.cpp
 clean:
 	@rm loadBalancer
