Insert a new record in the sessions table when a packet with sessionID of 0 is received by the server

--- a/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj
+++ b/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="DatabaseManager.cpp" />
     <ClCompile Include="PacketFormat.cpp" />
     <ClCompile Include="RequestHandler.cpp" />
+    <ClCompile Include="SessionsDAO.cpp" />
     <ClCompile Include="UsersDAO.cpp" />
     <ClCompile Include="sockets.cpp" />
     <ClCompile Include="TheSystemServer.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="DatabaseManager.h" />
     <ClInclude Include="PacketFormats.h" />
     <ClInclude Include="RequestHandler.h" />
+    <ClInclude Include="SessionsDAO.h" />
     <ClInclude Include="UsersDAO.h" />
     <ClInclude Include="sockets.h" />
   </ItemGroup>
