--- a/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj.filters
+++ b/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="PacketFormat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SessionsDAO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sockets.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PacketFormats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SessionsDAO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
