Add missing parameters. Update the server makefile. Resolve compilation errors in Linux.

--- a/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj
+++ b/TheSystemServer/TheSystemServer/TheSystemServer.vcxproj
@@ -139,7 +139,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>P:\zlib-1.3;C:\Program Files\MySQL\mysql-connector-c++-8.1.0-winx64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\zlib-1.3;C:\Program Files\MySQL\mysql-connector-c++-8.1.0-winx64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
